# Personality-driven-chatbot

./: .gitignore  README.md  docker-compose.yml  generate_tfidf.py  main.py  pyproject.toml  rasa_run_irc.sh  rasabot.Dockerfile  run_interactive_shell.sh  similar.py  srl.py
Model/: tfidflyrics.pkl
elastic/: build.sh  deploy.sh
ircbot/: Dockerfile  build.sh  color_utils.py  deploy.sh  exec_bash.sh  freeze_reqs.sh  generate_tfidf.py  main.py  pyproject.toml  requirements.txt  run_bash_mounted.sh  run_bash_no_mount.sh  similar.py  srl.py
rasabot/: Dockerfile  actions.py  build.sh  credentials.yml  deploy.sh  domain.yml  endpoints.yml  graph.html  irc_channel.py  rasa_docker_init.sh  run_bash.sh  run_interactive_mounted.sh
rasabot/data/: nlu.md  stories.md
rasabot/results/: intent_errors.json  intent_report.json
rasabot/tests/: conversation_tests.md
