[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "ircbot"
version = "0.1.0"
[tool.poetry.dependencies]
pydle = "^0.9.3"
python = "^3.7"
pandas = "^1.0"
sklearn = "^0.0.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
aiohttp = "^3.6"
[tool.poetry.dev-dependencies]
