[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "ircbot"
version = "0.1.0"
[tool.poetry.dependencies]
# allennlp needs torch
allennlp = {version = "1.0.0rc3", allow-prereleases = true}
allennlp-models = {version = "1.0.0rc3", allow-prereleases = true}
pydle = "^0.9.3"
python = "^3.8"
pandas = "^1.0"
sklearn = "^0.0.0"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
aiohttp = "^3.7"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
